--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8" />
     <title>Toy Tale</title>
     <link rel="stylesheet" href="index.css" />
+    <script type="text/javascript" defer src="src/index.js"></script>
+    <script type="text/javascript" src="src/DomService.js"></script>
+    <script type="text/javascript" src="src/ApiService.js"></script>
+    <script type="text/javascript" src="src/Toy.js"></script>
   </head>
   <body>
     <div id="toy-header">
@@ -46,6 +50,5 @@
     </p>
 
     <div id="toy-collection"></div>
-    <script type="text/javascript" src="src/index.js"></script>
   </body>
 </html>
